<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="contextual_actions">Contextual Actions</string>
  <string name="network">Network</string>
  <string name="endpoint">Endpoint</string>
  <string name="delay">Delay</string>
  <string name="variance">Variance</string>
  <string name="error">Error</string>
  <string name="proxy">Proxy</string>
  <string name="logging">Logging</string>
  <string name="mock_behavior">Mock Behavior</string>
  <string name="capture_intents">Capture intents</string>
  <string name="repositories">Repositories</string>
  <string name="user_interface">User Interface</string>
  <string name="animations">Animations</string>
  <string name="pixel_grid">Pixel Grid</string>
  <string name="pixel_scale">Pixel Scale</string>
  <string name="scalpel">Scalpel</string>
  <string name="wireframe">Wireframe</string>
  <string name="logs">Logs</string>
  <string name="show_logs">Show logs</string>
  <string name="leak_analysis">Leak analysis</string>
  <string name="build_information">Build Information</string>
  <string name="name">Name</string>
  <string name="code">Code</string>
  <string name="sha">SHA</string>
  <string name="date">Date</string>
  <string name="device_information">Device Information</string>
  <string name="make">Make</string>
  <string name="model">Model</string>
  <string name="resolution">Resolution</string>
  <string name="density">Density</string>
  <string name="release">Release</string>
  <string name="api">API</string>
  <string name="picasso">Picasso</string>
  <string name="indicators">Indicators</string>
  <string name="cache">Cache</string>
  <string name="hits">\u0020\u0020\u0020Hits</string>
  <string name="misses">\u0020\u0020\u0020Misses</string>
  <string name="decoded">Decoded</string>
  <string name="total">\u0020\u0020\u0020Total</string>
  <string name="average">\u0020\u0020\u0020Average</string>
  <string name="transformed">Transformed</string>
  <string name="okhttp_cache">OkHttp Cache</string>
  <string name="max_size">Max Size</string>
  <string name="write_errors">Write Errors</string>
  <string name="request_count">Request Count</string>
  <string name="network_count">\u0020\u0020\u0020Network Count</string>
  <string name="hit_count">\u0020\u0020\u0020Hit Count</string>
</resources>
