<?xml version="1.0" encoding="utf-8"?>

<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:columnCount="2"
    tools:ignore="UselessParent">
  <LinearLayout
      android:layout_columnSpan="2"
      android:layout_width="0dp"
      android:layout_gravity="start|fill_horizontal"
      android:orientation="horizontal"
      >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical|right"
        android:orientation="vertical"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/launcher_name"
          style="@android:style/TextAppearance.Holo.Widget.ActionBar.Title"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/development_settings"
          style="@android:style/TextAppearance.Holo.Widget.ActionBar.Subtitle"
          />
    </LinearLayout>
    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/app_icon"
        />
  </LinearLayout>

  <!-- CONTEXTUAL SECTION -->

  <TextView
      android:id="@+id/debug_contextual_title"
      android:layout_columnSpan="2"
      android:layout_width="0dp"
      android:layout_gravity="start|fill_horizontal"
      android:text="@string/contextual_actions"
      android:visibility="gone"
      style="@style/Widget.U2020.DebugDrawer.Header"
      />

  <LinearLayout
      android:id="@+id/debug_contextual_list"
      android:layout_columnSpan="2"
      android:layout_width="0dp"
      android:layout_gravity="start|fill_horizontal"
      android:visibility="gone"
      android:orientation="vertical"
      />

  <!-- NETWORK SECTION -->

  <TextView
      android:layout_columnSpan="2"
      android:layout_width="0dp"
      android:layout_gravity="start|fill_horizontal"
      android:text="@string/network"
      style="@style/Widget.U2020.DebugDrawer.Header"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/endpoint"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      android:gravity="center_vertical"
      >
    <Spinner
        android:id="@+id/debug_network_endpoint"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        />
    <ImageButton
        android:id="@+id/debug_network_endpoint_edit"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="4dp"
        android:src="@drawable/debug_drawer_icon_edit"
        android:background="?android:attr/actionBarItemBackground"
        android:visibility="gone"
        />
  </LinearLayout>

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/delay"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <Spinner
      android:id="@+id/debug_network_delay"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/variance"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <Spinner
      android:id="@+id/debug_network_variance"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/error"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <Spinner
      android:id="@+id/debug_network_error"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/proxy"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <Spinner
      android:id="@+id/debug_network_proxy"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/logging"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <Spinner
      android:id="@+id/debug_network_logging"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      />

  <!-- MOCK BEHAVIOR SECTION -->

  <TextView
      android:layout_columnSpan="2"
      android:layout_width="0dp"
      android:layout_gravity="start|fill_horizontal"
      android:text="@string/mock_behavior"
      style="@style/Widget.U2020.DebugDrawer.Header"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/capture_intents"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <Switch
      android:id="@+id/debug_capture_intents"
      android:layout_gravity="start|center_vertical"
      style="@style/Widget.U2020.DebugDrawer.RowWidget"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/repositories"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <Spinner
      android:id="@+id/debug_repositories_response"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      />

  <!-- USER INTERFACE SECTION -->

  <TextView
      android:layout_columnSpan="2"
      android:layout_width="0dp"
      android:layout_gravity="start|fill_horizontal"
      android:text="@string/user_interface"
      style="@style/Widget.U2020.DebugDrawer.Header"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/animations"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <Spinner
      android:id="@+id/debug_ui_animation_speed"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/pixel_grid"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <Switch
      android:id="@+id/debug_ui_pixel_grid"
      android:layout_gravity="start|center_vertical"
      style="@style/Widget.U2020.DebugDrawer.RowWidget"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/pixel_scale"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <Switch
      android:id="@+id/debug_ui_pixel_ratio"
      android:layout_gravity="start|center_vertical"
      style="@style/Widget.U2020.DebugDrawer.RowWidget"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/scalpel"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <Switch
      android:id="@+id/debug_ui_scalpel"
      android:layout_gravity="start|center_vertical"
      style="@style/Widget.U2020.DebugDrawer.RowWidget"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/wireframe"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <Switch
      android:id="@+id/debug_ui_scalpel_wireframe"
      android:layout_gravity="start|center_vertical"
      style="@style/Widget.U2020.DebugDrawer.RowWidget"
      />

  <!-- LOGGING SECTION -->

  <TextView
      android:layout_columnSpan="2"
      android:layout_width="0dp"
      android:layout_gravity="start|fill_horizontal"
      android:text="@string/logs"
      style="@style/Widget.U2020.DebugDrawer.Header"
      />
  <Button
      android:id="@+id/debug_logs_show"
      android:layout_columnSpan="2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_gravity="start|fill_horizontal"
      android:text="@string/show_logs"
      />
  <Button
      android:id="@+id/debug_leaks_show"
      android:layout_columnSpan="2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_gravity="start|fill_horizontal"
      android:text="@string/leak_analysis"
      />

  <!-- BUILD INFORMATION SECTION -->

  <TextView
      android:layout_columnSpan="2"
      android:layout_width="0dp"
      android:layout_gravity="start|fill_horizontal"
      android:text="@string/build_information"
      style="@style/Widget.U2020.DebugDrawer.Header"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/name"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_build_name"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/code"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_build_code"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/sha"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_build_sha"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/date"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_build_date"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <!-- DEVICE INFORMATION SECTION -->

  <TextView
      android:layout_columnSpan="2"
      android:layout_width="0dp"
      android:layout_gravity="start|fill_horizontal"
      android:text="@string/device_information"
      style="@style/Widget.U2020.DebugDrawer.Header"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/make"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_device_make"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/model"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_device_model"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/resolution"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_device_resolution"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/density"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_device_density"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/release"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_device_release"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/api"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_device_api"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <!-- PICASSO SECTION -->

  <TextView
      android:layout_columnSpan="2"
      android:layout_width="0dp"
      android:layout_gravity="start|fill_horizontal"
      android:text="@string/picasso"
      style="@style/Widget.U2020.DebugDrawer.Header"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/indicators"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <Switch
      android:id="@+id/debug_picasso_indicators"
      android:layout_gravity="start|center_vertical"
      style="@style/Widget.U2020.DebugDrawer.RowWidget"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/cache"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_picasso_cache_size"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/hits"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_picasso_cache_hit"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/misses"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_picasso_cache_miss"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/decoded"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_picasso_decoded"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/total"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_picasso_decoded_total"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/average"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_picasso_decoded_avg"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/transformed"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_picasso_transformed"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/total"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_picasso_transformed_total"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/average"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_picasso_transformed_avg"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <!-- OKHTTP CACHE SECTION -->

  <TextView
      android:layout_columnSpan="2"
      android:layout_width="0dp"
      android:layout_gravity="start|fill_horizontal"
      android:text="@string/okhttp_cache"
      style="@style/Widget.U2020.DebugDrawer.Header"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/max_size"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_okhttp_cache_max_size"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/write_errors"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_okhttp_cache_write_error"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/request_count"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_okhttp_cache_request_count"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/network_count"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_okhttp_cache_network_count"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/hit_count"
      style="@style/Widget.U2020.DebugDrawer.RowTitle"
      />
  <TextView
      android:id="@+id/debug_okhttp_cache_hit_count"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      style="@style/Widget.U2020.DebugDrawer.RowValue"
      />

</GridLayout>
